--- a/BlogposterCMS/public/plainspace/partials/default-sidebar.html
+++ b/BlogposterCMS/public/plainspace/partials/default-sidebar.html
@@ -1,13 +1,14 @@
 <div class="sidebar">
   <nav class="sidebar-nav">
+    <a href="/admin/content/" class="sidebar-item">
+      <img src="/assets/icons/layout-gradient.svg" class="icon" alt="Overview"/>
+      <span class="label">Overview</span>
+    </a>
     <a href="/admin/content/pages" class="sidebar-item">
       <img src="/assets/icons/file.svg" class="icon" alt="Pages"/>
       <span class="label">Pages</span>
     </a>
-    <a href="/admin/content/layouts" class="sidebar-item">
-      <img src="/assets/icons/layout-gradient.svg" class="icon" alt="Layouts"/>
-      <span class="label">Layouts</span>
-    </a>
+   
     <a href="/admin/content/menu" class="sidebar-item">
       <img src="/assets/icons/menu.svg" class="icon" alt="Menus"/>
       <span class="label">Menu</span>
@@ -20,7 +21,6 @@
       <img src="/assets/icons/grid.svg" class="icon" alt="Widgets"/>
       <span class="label">Widgets</span>
     </a>
-
-    </a>
+    
   </nav>
 </div>
