--- a/BlogposterCMS/public/assets/scss/site.scss
+++ b/BlogposterCMS/public/assets/scss/site.scss
@@ -23,7 +23,7 @@
 @import 'pages/fonts';
 @import 'pages/login-strategy-edit';
 @import 'pages/modules';
-@import 'pages/layouts';
+@import 'pages/contenent';
 @import 'components/builder';
 @import 'components/heading-widget';
 @import 'components/page-editor';
