--- a/BlogposterCMS/public/assets/scss/components/_builder.scss
+++ b/BlogposterCMS/public/assets/scss/components/_builder.scss
@@ -530,6 +530,10 @@ body.preview-desktop #content {
 
 .bounding-box {
   position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   border: 1px dashed var(--user-color, #333);
   pointer-events: none;
   box-sizing: border-box;
